--- a/bin/.project
+++ b/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FoodDeliveryConnectivity</name>
+	<name>NBAStats_S4G4</name>
 	<comment></comment>
 	<projects>
 	</projects>
